# memsocket

./: .travis.yml  Cargo.toml  README.md
src/: bounded.rs  compat.rs  lib.rs  read.rs  unbounded.rs  write.rs
tests/: async_test.rs  bounded_test.rs  unbounded_test.rs
